# MUUV_ROS

./: .gitmodules  README.md
Muuv_ros/muuv_control/include/muuv_control/: thrusters.hpp
Muuv_ros/muuv_control/src/: motor_controller2.cpp
Muuv_ros/muuv_msgs/msg/: MotorCommandList.msg
Muuv_ros/muuv_sensors/: package.xml
Muuv_ros/muuv_sensors/include/muuv_sensors/: imu_node.hpp
Muuv_sim/muuv_sim_control/launch/: start_thruster_manager.launch.py
Muuv_sim/muuv_sim_description/: CMakeLists.txt
Muuv_sim/muuv_sim_description/robots/: muuv_sim_default.xacro
Muuv_sim/muuv_sim_description/urdf/: sensors.xacro
ignition/: package.xml
ignition/worlds/: underwater_sim.sdf
install/: local_setup.sh  setup.sh
install/custom_msg_srv/share/custom_msg_srv/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/muuv_ros/lib/muuv_ros/: component_container  global_parameter_server  imu_repub  pid  pid_recombiner  pid_recombiner_sync  sensors  thrusters
install/muuv_ros/share/muuv_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/muuv_sim/share/muuv_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/muuv_sim_control/share/muuv_sim_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/muuv_sim_description/share/muuv_sim_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pid_component/include/pid_component/: pid_component.hpp  visibility_control.h
install/pid_component/share/pid_component/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/plankton/share/plankton/: local_setup.sh  package.bash  package.sh  package.zsh
install/plankton_utils/lib/plankton_utils/: plankton_global_sim_time
install/plankton_utils/share/plankton_utils/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
install/test_sim/share/test_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/uuv_assistants/lib/uuv_assistants/: uuv_message_to_tf
install/uuv_assistants/share/uuv_assistants/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
install/uuv_auv_control_allocator/share/uuv_auv_control_allocator/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
install/uuv_control_cascaded_pid/share/uuv_control_cascaded_pid/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
install/uuv_control_msgs/share/uuv_control_msgs/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
install/uuv_control_utils/share/uuv_control_utils/: local_setup.sh  package.bash  package.sh  package.zsh
install/uuv_descriptions/share/uuv_descriptions/: local_setup.sh  package.bash  package.sh  package.zsh
install/uuv_gazebo/share/uuv_gazebo/: local_setup.sh  package.bash  package.sh  package.zsh
install/uuv_gazebo_plugins/share/uuv_gazebo_plugins/: local_setup.sh  package.bash  package.sh  package.zsh
install/uuv_gazebo_ros_plugins/share/uuv_gazebo_ros_plugins/: package.bash  package.sh  package.zsh
install/uuv_gazebo_ros_plugins_msgs/share/uuv_gazebo_ros_plugins_msgs/: local_setup.sh  package.bash  package.ps1  package.sh  (+1 more)
log/: latest_build
src/: .gitignore  .gitmodules  README.md
src/Muuv_ros/muuv_control/: CMakeLists.txt  package.xml
src/Muuv_ros/muuv_core/: CMakeLists.txt  package.xml
src/Muuv_ros/muuv_msgs/: CMakeLists.txt  package.xml
src/Muuv_ros/muuv_ros/: CMakeLists.txt  package.xml
src/Muuv_ros/muuv_sensors/: CMakeLists.txt
src/Muuv_ros/muuv_sensors/include/muuv_sensors/: imu_node.hpp
src/Muuv_sim/muuv_sim/: CMakeLists.txt  package.xml
src/Muuv_sim/muuv_sim/launch/: muuv_sim.launch.py
src/Muuv_sim/muuv_sim_control/: CMakeLists.txt  package.xml
src/Muuv_sim/muuv_sim_control2/: CMakeLists.txt  package.xml
src/Muuv_sim/muuv_sim_description/: CMakeLists.txt  package.xml
src/Muuv_sim/muuv_sim_description2/: CMakeLists.txt  package.xml
src/ignition/: CMakeLists.txt
src/muuv_ros/: CMakeLists.txt
src/muuv_ros/include/muuv_ros/: sensors.hpp  thrusters.hpp
src/muuv_ros/launch/: test.launch.py
src/muuv_ros/src/muuv_ros/: imu_repub.cpp  pid_recombiner.cpp  sensors.cpp  thrusters.cpp
src/pid/: CMakeLists.txt  package.xml
src/pid_component/: CMakeLists.txt  package.xml
src/pid_component/include/pid_component/: pid_component.hpp
src/pid_component/launch/: muuv_pid.launch.py  pid.launch.py  single_node.launch.py
src/pid_component/src/pid_component/: pid_component.cpp
src/test_sim/: CMakeLists.txt  package.xml
src/test_sim/config/: view_bot.rviz
src/test_sim/description/: robot_core.xacro
src/test_sim/launch/: test.launch.py
(+327 files in other folders)
