<?xml version='1.0' encoding='utf-8'?>
<package format="3">
    <name>muuv_sim</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="alex.xu@whoi.edu">isopodin-time</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>muuv_sim_description</exec_depend>
    <exec_depend>muuv_sim_control</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
